[package]
name = "balloon_telemetry"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
open-location-code = { path = "open-location-code" }
geo-types = "0.7.10"
rand = { version = "0.8.5", features = ["small_rng"] }
libc-print = "0.1.21"
half = { version = "2.3.1", features = ["alloc"] }
zfec-rs = "0.1.0"
