cargo-features = ["profile-rustflags"]

#[unstable]
#build-std = ["core", "compiler_builtins"]
#build-std-features = ["compiler-builtins-mem"]

#[build]
#target = "avr-atmega2560"

[package]
name = "balloon-v2"
version = "0.1.0"
authors = ["NexusXe <andastrike@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
build = "build.rs"

[[bin]]
name = "balloon-v2"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "0.2.3"
reed-solomon = "0.2.1"
rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
#libudev-sys = "0.1"
avr-device = "0.5.1"
micromath = "2.0.0"
libm = "0.2.7"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "7dfa6d322b9df98b2d98afe0e14a97afe0187ac1"
features = ["arduino-mega2560"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = 3

[profile.release]
panic = "abort"
codegen-units = 1
debug = false
strip = true
lto = true
opt-level = 2
rustflags = [
    "-C", "inline-threshold=75"
]

[profile.dev.package."*"] # +
codegen-units = 1
debug = false
strip = true
opt-level = 2 # +
rustflags = [
    "-C", "inline-threshold=75"

]

[profile.release.package."*"] # +
codegen-units = 1
debug = false
strip = true
opt-level = 2 # +
rustflags = [
    "-C", "inline-threshold=75"

]
